# DataStructureAndAlgorithm

./: .gitignore  CMakeLists.txt
InfixToSuffix/: README.MD
InfixToSuffix/simple/: StackChar.c  StackChar.h  StackFloat.c  StackFloat.h  calc.c  calc.h  test.c
InfixToSuffix/universal/: Stack.c  Stack.h  calc.c  calc.h  test.c
LinearList/: LinkList.c  LinkList.h  SqList.c  SqList.h
